--- a/static/styles.css
+++ b/static/styles.css
@@ -65,8 +65,24 @@ body {
 
 .board-square-light {
     background-color: #dddddd;
+    padding: 0;
 }
 
 .board-square-dark {
     background-color: #aaaaaa;
+    padding: 0
+}
+
+.move-highlight {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
+
+.board-square-light .move-highlight {
+    background-color: #ddddff;
+}
+
+.board-square-dark .move-highlight {
+    background-color: #aaaacc;
 }
